--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "kuchi-hidup-app-admin",
+  "name": "stumble-app-admin",
   "private": true,
   "version": "0.0.0",
   "type": "module",
